# simstock

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOSS_references.bib  LICENSE  README.md  Simstock_joss.md  demo.ipynb  environment.yaml  inputdata.csv  paper.md  poetry.toml  pyproject.toml  script.py  script_gpkg.py  test.idf
.github/workflows/: .readthedocs.yaml  release.yaml  test.yaml
docs/: search.js  simstock.html  src.html
docs/simstock/: _apiextensions.html  _errors.html  _serialisation.html  base.html  errors.html  idf_geometry.html  preprocessing.html  simstockdataframe.html  simstockseries.html
docs/source/: conf.py  devinstructions.rst  examples.rst  index.rst  installation.rst  modules.rst  overview.rst  simstock.rst  simstockqgis.rst
docs/src/: simstock.html
docs/src/simstock/: errors.html  idf_geometry.html  preprocessing.html  simstockdataframe.html  simstockseries.html
src/simstock/: __init__.py  base.py  io.py  plotting.py  schedule_generators.py
src/simstock/_algs/: _coords_algs.py  _idf_algs.py  _idf_sim.py  _polygon_algs.py  _simplification.py
src/simstock/_utils/: _dirmanager.py  _exceptions.py  _output_handling.py  _overheating.py  _serialisation.py  _timeseries_methods.py
src/simstock/settings/: DB-Fabric-CONSTRUCTION.csv  DB-Fabric-MATERIAL.csv  DB-Fabric-MATERIAL_NOMASS.csv  DB-Fabric-WINDOWMATERIAL_GAS.csv  DB-Fabric-WINDOWMATERIAL_GLAZING.csv  DB-HeatingCooling-OnOff.csv  DB-Loads-ELECTRICEQUIPMENT.csv  DB-Loads-LIGHTS.csv  DB-Loads-PEOPLE.csv  DB-Schedules-SCHEDULE_COMPACT.csv  GBR_ENG_London.Wea.Ctr-St.James.Park.037700_TMYx.2007-2021.epw  base.idf  infiltration_dict.json  settings.idf  ventilation_dict.json
tests/: buildings1.csv  golden.py  test.idf  test_eppy.py  test_idf_build.py  test_simstockdataframe.py
tests/data/: S7_data.gpkg  S7_mixeduse.gpkg  test_data.csv  test_data.parquet
tests/data/golden_files/golden_eppy/: eplusout.eso  eplusout.mtr
