[tool.poetry]
name = "simstock"
version = "0.1.1"
description = "A Python package for building stock simulations"
authors = [
    "Olly Smith <olly.smith@ucl.ac.uk>",
    "Ivan Korolija <i.korolija@ucl.ac.uk>",
    "Shyam Amrith <email>"
    ]
readme = "README.md"
packages = [{include = "simstock", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^2.0.1"
eppy = "^0.5.63"
pandas = "^1.5.3"
numpy = "^1.24.2"
fastparquet = "^2023.2.0"
matplotlib = "^3.7.1"
geopandas = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pdoc = "^13.0.0"
pylint = "^2.16.4"
ipykernel = "^6.22.0"
poetry2conda = "^0.3.0"
sphinx = "^6.0"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry2conda]
name = "simstock"

[tool.poetry2conda.dependencies]
eppy = {name = "eppy-core", channel = "conda-forge"}
geopandas = {channel = "conda-forge"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
