[tool.poetry]
name = "simstock"
version = "0.3.1"
description = "A Python package for building stock simulations"
authors = [
    "Ivan Korolija <i.korolija@ucl.ac.uk>",
    "Shyam Amrith <shyam.amrith.14@ucl.ac.uk>",
    "Olly Smith <olly.smith@ucl.ac.uk>"
    ]
readme = "README.md"
packages = [{include = "simstock", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
shapely = ">=2.0,<3.0"
eppy = ">=0.5.63,<0.6.0"
pandas = ">=2.2,<4.0"
numpy = ">=1.26,<3.0"
matplotlib = ">=3.8,<4.0"
geopandas = ">=1.0,<2.0"
pyarrow = ">=16,<20"

[tool.poetry.group.dev.dependencies]
pdoc = "^13.0.0"
pylint = "^2.16.4"
ipykernel = "^6.22.0"
poetry2conda = "^0.3.0"
sphinx = "^6.0"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry2conda]
name = "simstock"

[tool.poetry2conda.dependencies]
eppy = {name = "eppy-core", channel = "conda-forge"}
geopandas = {channel = "conda-forge"}
pyarrow = {channel = "conda-forge"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
